--- a/public/whackamole.css
+++ b/public/whackamole.css
@@ -1,15 +1,3 @@
-/*for div boxes*/
-.whack-boxes{
-    width: 125px;
-    height: 125px;
-    border: 1px solid;
-    margin-bottom: 10px;
-    background-image: url('images/swirl_pattern.png');
-    border-radius: 50%;
-    opacity: 0.4;
-
-}
-
 /*when image fades in*/
 .fade-in{
     border:none;
@@ -21,6 +9,8 @@
 	box-shadow: -6px 1px 11px 6px #A0A19F;
 	border-radius: 30%;
     opacity: 1.0;
+    width: 125px;
+    height: 125px;
 }
 
 /*game timer*/
@@ -86,4 +76,48 @@ h1,h2{
   height: 100%;
   padding: 0px;
   margin: 0px;
+}
+
+/*for mobile responsiveness*/
+@media(max-width:480px){
+.whack-boxes{
+    width: 100px;
+    height: 100px;
+    border: 1px solid;
+    margin-top: 1px;
+    background-image: url('images/swirl_pattern.png');
+    border-radius: 50%;
+    opacity: 0.0;
+    display: inline-block;
+    }
+
+#gameStart{
+    float: left;
+    margin-top: 20px;
+    display: inline;
+    }
+
+#gameReset{
+    float: right;
+    margin-top: 20px;
+    display: inline;
+    width: 120px;
+    margin-right: 0;
+    }
+
+.fade-in{
+    border:none;
+    background-color: none;
+    color: none;
+    background-image: url('images/sam-jac-laurence1.jpg');
+    max-height: 100px; 
+    max-width: 100px;
+    box-shadow: -3px 1px 11px 3px #A0A19F;
+    border-radius: 50%;
+    opacity: 1.0;
+    }
+
+#timer{
+    margin-top: 10px;
+    }
 }
